Fix result container position issue when used on small screens

--- a/tabs.css
+++ b/tabs.css
@@ -8,9 +8,6 @@
   background-color: #111;
   overflow-x: hidden;
   padding-top: 20px;
-}
-
-.sidenav {
   padding: 20% 10px;
   text-decoration: none;
   color: #818181;
