--- a/wordpicker.css
+++ b/wordpicker.css
@@ -44,6 +44,7 @@ table, tr, td {
   width: 400px;
   height: auto;
   padding: 25px;
+  position: relative;
   background-color: #9c9c9c;
   border-radius: 15px;
 }
